@@ -1,60 +1,85 @@
 /* Client.java
- * LAST REVISION: 6/3/2016
+ * LAST REVISION: 6/4/2016
  */
 
 package main;
 
 import java.io.*;
 import java.net.*;
+import logger.JLog;
+import logger.JLogImpl;
 
-public class Client implements ClientConnect {
+public class Client implements ClientConnect{
 
 	//Variable declarations
-	private boolean debug = true;
+	private boolean debug = false;
+	private boolean logText = false;
+			
+	private String hostName;					//IP address of Host
+	private int portNumber;						//Port number to connect to
+	private String logChoice;					//Logging? (yes or no)
+	private String logMethod;					//Log method (Text file or Command line)
+	private String inputFromClient;				//String input from client
+	private String responseFromServer;			//String output from server
+	private String[] logArray = new String[3];	//Array that contains all logging information
+	private DataOutputStream dosClient;			//Input from Client, sent to server
+	private DataInputStream disServer;			//Input from Server
+	private InputStreamReader clientIn;			//String input from command line (written by client)
 	
-	private String hostName;
-	private int portNumber;
-	private String logChoice;
-	private String logMethod;
-	private String[] logElements;	//Array that has all the logged information to be written
-	
-	private static ClientConnect client = new Client();
+	public static void main(String[] args) throws IOException {
+		// Look for 4 command line arguments: host, port #, logging option, logging method
+		if (args.length != 4) {
+			System.out.println("Usage: <host name> <port number> <logging> <logging method>");
+			System.exit(1);
+			}
+		
+		//code to start client??
+		ClientConnect client;
+		
+		client.setHostName(args[0]);
+		client.setPortNumber(Integer.parseInt(args[1]));
+		client.setLogChoice(args[2]);
+		client.setLogMethod(args[3]);
+	}
 	
 	@Override
 	public void startClient() {
-		
-		// LOGGING CODE
 		if(logChoice.equalsIgnoreCase("yes")) {
-			if(logMethod.equalsIgnoreCase("txt")) {
-				try {
-					//Text file logging
-					File file = new File("ClientLog.txt");
-					FileOutputStream fos = new FileOutputStream(file);
-					BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(fos));
-					if(debug) System.out.println("DEBUG: Sucessfully created log output text file.");
-					logElements[0] = "Client.java: Sucessfully created log output text file";
-				} catch(FileNotFoundException fnf) {
-					System.out.println("File unable to be found.");
-				} catch(IOException ioe) {
-					System.out.println("File unable to be written to.");
-				}
-			} else {
-				//Command line logging
-				if(debug) System.out.println("DEBUG: Command line logging chosen.");
-			}
+			logText = true;
+			Jlog log = JlogImpl.getLog();
+			//set log text file name??
+		} else {
+			debug = true;
 		}
-		
+			
 		try {
 			//Establish connection with server and open up communication
 			Socket s = new Socket(hostName, portNumber);
 			if(debug) System.out.println("DEBUG: established connection with server at: " + hostName + portNumber);
-			logElements[1] = "Client.java: Sucessfully established connection with server at: " + hostName + portNumber;
+			if(logText) log.cLogDEBUGMessage("DEBUG: established connection with server at: " + hostName + portNumber);
+				
+			dosClient = new DataOutputStream(s.getOutputStream());
+			disServer = new DataInputStream(s.getInputStream());
+			clientIn = new InputStreamReader(System.in);
+		
+			inputFromClient = clientIn.toString();	//get string from command line
+			if(debug) System.out.println("DEBUG: Acquired client input from command line.");
+			if(logText) log.cLogDEBUGMessage("DEBUG: Acquired client input from command line.");
+			System.out.println("Client: " + inputFromClient);
 			
-			Thread newClientThread = new Thread(new ClientThread(hostName, portNumber, s));
-			if(debug) System.out.println("DEBUG: Created a new client thread."); 
-			logElements[2] = "Client.java: Sucessfully created a new client thread";
-		} catch( IOException se) {
-			System.out.println("Error with creating socket.");
+			dosClient.writeUTF(inputFromClient);	//send string from command line to server
+			if(debug) System.out.println("DEBUG: Sent the string - " + inputFromClient);
+			if(logText) log.cLogDEBUGMessage("DEBUG: Sent the string - " + inputFromClient);
+			
+			responseFromServer = disServer.readUTF();	//get server reply
+			if(debug) System.out.println("DEBUG: Got the response from the server.");
+			if(logText) log.cLogDEBUGMessage("DEBUG: Got the response from the server.");
+			System.out.print("Server: " + responseFromServer);
+			
+			System.exit(1);
+		} catch(IOException ioe) {
+			System.out.println("Error with connection.");
+			System.exit(1);
 		}
 	}
 
@@ -78,90 +103,4 @@ public class Client implements ClientConnect {
 		this.logMethod = logMethod;
 	}
 	
-	public static ClientConnect getClient(){
-		return client;
-	}
 }
-
-
-
-
-
-
-//	//Variable declarations
-//	private static boolean debug = true;
-//	
-//	//private static String hostName;		//IP address of Host
-//	//private static int portNumber;		//Port number to connect to
-//	//private static String logChoice;	//Logging? (yes or no)
-//	//private static String logMethod;		//Log method (Text file or Command line)
-//	private static String inputFromClient;		//String input from client
-//	private static String responseFromServer;	//String output from server
-//	private String[] logArray = new String[3];	//Array that contains all logging information
-//	private static DataInputStream disClient;	//Input from Client
-//	private static DataInputStream disServer;	//Input from Server
-//	
-//	public static void main(String[] args) throws IOException {
-//		
-//		if(debug) System.out.println("Debug: ClientStartUp started.");
-//		
-//		hostName = args[0];
-//		portNumber = Integer.parseInt(args[1]);
-//		logChoice = args[2];
-//		logMethod = args[3];
-//		
-//		// Look for 4 command line arguments: host, port #, logging option, logging method
-//		if (args.length != 4) {
-//			System.out.println("Error. Command line arguments needed: Host, Port number, Logging (yes or no), Logging method (command line[cmd] or text file[txt])");
-//		}
-//		
-//		/* LOGGING CODE
-//		if(logChoice.equalsIgnoreCase("yes")) {
-//			if(logMethod.equalsIgnoreCase("txt")) {
-//				//Text file logging
-//				File file = new File("ClientLog.txt");
-//				FileOutputStream fos = new FileOutputStream(file);
-//				BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(fos));
-//			} else {
-//				//Command line logging
-//				//Code for cmd line logging
-//			}
-//		}
-//		*/
-//		
-//		try {
-//			//Establish connection with server and open up communication
-//			Socket s = new Socket(hostName, portNumber);
-//			if(debug) System.out.println("Debug: established connection with server at: " + hostName + portNumber);
-//			//logArray[0] = "Connection to host established";
-//					
-//			//DataOutputStream dosServer = new DataOutputStream(s.getOutputStream());	//Output to server
-//			disServer = new DataInputStream(s.getInputStream());
-//			disClient = new DataInputStream(System.in);
-//		
-//			responseFromServer = disServer.readUTF();
-//			inputFromClient = disClient.readUTF();
-//			
-//			while(responseFromServer != null) {
-//				System.out.print("Server: " + responseFromServer);
-//				//logArray[1] = "String recieved from server: " + responseFromServer;
-//				
-//				if(responseFromServer.equalsIgnoreCase("end")) {
-//					if(debug) System.out.println("Debug: server ended connection");
-//					//logArray[3] = "Server ended connection.";
-//					break;
-//				}
-//				
-//				if(inputFromClient != null) {
-//					System.out.println("Client: " + inputFromClient);
-//					//logArray[2] = "String recieved from client: " + inputFromClient;
-//				}
-//			}
-//		} catch(UnknownHostException uhe) {
-//			System.out.println("Error connecting to " + hostName);
-//			System.exit(1);
-//		}
-//		
-//	}
-//
-//}
